--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Just Keep Swimming</title>
     <script src="lib/phaser.js"></script>
-    <script src="src/Menu.js"></script>
-    <script src="src/Credits.js"></script>
-    <script src="src/Play.js"></script>
-    <script src="src/GameOver.js"></script>
+    <script src="src/prefabs/Player.js"></script>
+    <script src="src/scenes/Menu.js"></script>
+    <script src="src/scenes/Credits.js"></script>
+    <script src="src/scenes/Play.js"></script>
+    <script src="src/scenes/GameOver.js"></script>
     <script src="src/main.js"></script>
 </head>
 <body>
